fix 2nd and 3rd requirements spacing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
   background-color: rgb(66, 103, 178);
   display: flex;
   justify-content: space-between;
-  padding: 0 5%;
 }
 
 .facebook-login {
